# server/openapi_server/openapi/openapi.yaml
@@ -407,6 +407,18 @@ paths:
         "200":
           description: Successfully shut down the server.
       x-openapi-router-controller: openapi_server.controllers.default_controller
+  /user/id:
+    summary: Get the ID of the currently logged in user.
+    get:  
+      operationId: user_id_get
+      security:
+      - UserAuth: []
+      responses:
+        "200":
+          description: Successfully fetched the logged-in user's id.
+        "400":
+          description: Failed to fetch the logged-in user's id.
+      x-openapi-router-controller: openapi_server.controllers.default_controller
   /user/{user_id}:
     get:
       operationId: user_user_id_get
